--- a/.github/workflows/dependabot-burner-with-project.lock.yml
+++ b/.github/workflows/dependabot-burner-with-project.lock.yml
@@ -20,7 +20,7 @@
 # For more information: https://github.com/github/gh-aw/blob/main/.github/aw/github-agentic-workflows.md
 #
 #
-# frontmatter-hash: dfe0536d7c1ab419347c250e1b0b4cd5bba08d0173aef25582f15160c3a07f7d
+# frontmatter-hash: c0504d0cf1ca12c1946e9002b2e38b3e77b43c20c3f7b41cb2d67ed8aea517d7
 
 name: "Dependabot Burner (with Projects)"
 "on":
@@ -47,8 +47,14 @@ jobs:
       comment_id: ""
       comment_repo: ""
     steps:
+      - name: Checkout actions folder
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+        with:
+          sparse-checkout: |
+            actions
+          persist-credentials: false
       - name: Setup Scripts
-        uses: github/gh-aw/actions/setup@ec99734fbadefe28647f8a53c3ec638a63324e53 # ec99734fbadefe28647f8a53c3ec638a63324e53
+        uses: ./actions/setup
         with:
           destination: /opt/gh-aw/actions
       - name: Check workflow file timestamps
@@ -88,8 +94,14 @@ jobs:
       output_types: ${{ steps.collect_output.outputs.output_types }}
       secret_verification_result: ${{ steps.validate-secret.outputs.verification_result }}
     steps:
+      - name: Checkout actions folder
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+        with:
+          sparse-checkout: |
+            actions
+          persist-credentials: false
       - name: Setup Scripts
-        uses: github/gh-aw/actions/setup@ec99734fbadefe28647f8a53c3ec638a63324e53 # ec99734fbadefe28647f8a53c3ec638a63324e53
+        uses: ./actions/setup
         with:
           destination: /opt/gh-aw/actions
       - name: Checkout repository
@@ -1018,8 +1030,14 @@ jobs:
       tools_reported: ${{ steps.missing_tool.outputs.tools_reported }}
       total_count: ${{ steps.missing_tool.outputs.total_count }}
     steps:
+      - name: Checkout actions folder
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+        with:
+          sparse-checkout: |
+            actions
+          persist-credentials: false
       - name: Setup Scripts
-        uses: github/gh-aw/actions/setup@ec99734fbadefe28647f8a53c3ec638a63324e53 # ec99734fbadefe28647f8a53c3ec638a63324e53
+        uses: ./actions/setup
         with:
           destination: /opt/gh-aw/actions
       - name: Download agent output artifact
@@ -1118,15 +1136,22 @@ jobs:
     needs: agent
     if: needs.agent.outputs.output_types != '' || needs.agent.outputs.has_patch == 'true'
     runs-on: ubuntu-latest
-    permissions: {}
+    permissions:
+      contents: read
     concurrency:
       group: "gh-aw-copilot-${{ github.workflow }}"
     timeout-minutes: 10
     outputs:
       success: ${{ steps.parse_results.outputs.success }}
     steps:
+      - name: Checkout actions folder
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+        with:
+          sparse-checkout: |
+            actions
+          persist-credentials: false
       - name: Setup Scripts
-        uses: github/gh-aw/actions/setup@ec99734fbadefe28647f8a53c3ec638a63324e53 # ec99734fbadefe28647f8a53c3ec638a63324e53
+        uses: ./actions/setup
         with:
           destination: /opt/gh-aw/actions
       - name: Download agent artifacts
@@ -1217,11 +1242,19 @@ jobs:
 
   pre_activation:
     runs-on: ubuntu-slim
+    permissions:
+      contents: read
     outputs:
       activated: ${{ steps.check_membership.outputs.is_team_member == 'true' }}
     steps:
+      - name: Checkout actions folder
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+        with:
+          sparse-checkout: |
+            actions
+          persist-credentials: false
       - name: Setup Scripts
-        uses: github/gh-aw/actions/setup@ec99734fbadefe28647f8a53c3ec638a63324e53 # ec99734fbadefe28647f8a53c3ec638a63324e53
+        uses: ./actions/setup
         with:
           destination: /opt/gh-aw/actions
       - name: Check team membership for workflow
@@ -1257,8 +1290,14 @@ jobs:
       process_safe_outputs_processed_count: ${{ steps.process_safe_outputs.outputs.processed_count }}
       process_safe_outputs_temporary_id_map: ${{ steps.process_safe_outputs.outputs.temporary_id_map }}
     steps:
+      - name: Checkout actions folder
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+        with:
+          sparse-checkout: |
+            actions
+          persist-credentials: false
       - name: Setup Scripts
-        uses: github/gh-aw/actions/setup@ec99734fbadefe28647f8a53c3ec638a63324e53 # ec99734fbadefe28647f8a53c3ec638a63324e53
+        uses: ./actions/setup
         with:
           destination: /opt/gh-aw/actions
           safe-output-projects: 'true'
